--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
     "angular-webstorage-service": "^1.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
