--- a/package.json
+++ b/package.json
@@ -11,36 +11,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.1",
-    "@angular/cdk": "^6.0.1",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/material": "^6.0.1",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@angular/animations": "^9.1.7",
+    "@angular/cdk": "^9.2.3",
+    "@angular/common": "^9.1.7",
+    "@angular/compiler": "^9.1.7",
+    "@angular/core": "^9.1.7",
+    "@angular/forms": "^9.1.7",
+    "@angular/localize": "^9.1.7",
+    "@angular/material": "^9.2.3",
+    "@angular/platform-browser": "^9.1.7",
+    "@angular/platform-browser-dynamic": "^9.1.7",
+    "@angular/router": "^9.1.7",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
-    "angular-webstorage-service": "^1.0.2",
-    "core-js": "^2.5.4",
+    "core-js": "3.6.5",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "ngx-webstorage-service": "^4.1.0",
+    "rxjs": "6.5.5",
+    "tslib": "^1.10.0",
+    "typescript": "~3.8.3",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular-devkit/build-angular": "~0.6.1",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.1",
-    "@angular/language-service": "^6.0.0",
+    "@angular-devkit/build-angular": "^0.901.6",
+    "@angular/cli": "^9.1.6",
+    "@angular/compiler-cli": "^9.1.7",
+    "@angular/language-service": "^9.1.7",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -48,8 +49,11 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "link": "^0.1.5",
+    "npm": "^6.14.5",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "webpack": "^4.43.0"
   }
 }
